ACA-216 zrusit edit this page link

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -107,3 +107,7 @@ a:hover {
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
 }
+
+div > div.margin-vert--xl > div > div > a {
+  display: none;
+}
